[package]
name = "fundraiser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = { git = "https://github.com/L0STE/pinocchio/", branch = "spl-token" }
pinocchio-system = { git = "https://github.com/L0STE/pinocchio/", branch = "spl-token" }
pinocchio-token = { git = "https://github.com/L0STE/pinocchio/", branch = "spl-token" }
five8_const = "0.1.3"
bytemuck = "1.19.0"
chrono = "0.4"