[package]
name = "fundraiser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-nostd-sha256 = "0.1.3"
pinocchio = { path = "../pinocchio/sdk/pinocchio" }
pinocchio-token = { path = "../pinocchio/programs/token" }
five8_const = "0.1.3"
bytemuck = "1.19.0"
chrono = "0.4"

[dev-dependencies]
mollusk-svm = "0.0.6"
solana-sdk = "=2.0.8"
spl-token = "6.0.0"