[package]
name = "fundraiser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-nostd-sha256 = "0.1.3"
pinocchio = "0.6.0"
pinocchio-token = "0.2.0"
five8_const = "0.1.3"

[dev-dependencies]
mollusk-svm = "0.0.6"
solana-sdk = "=2.0.8"
spl-token = "6.0.0"